solve page jump

--- a/app/public/css/mobile.css
+++ b/app/public/css/mobile.css
@@ -29,19 +29,16 @@
 		font-size: 20px;
 		background-color: #488922;
 		text-align: center;
+		float: left;
 	}
 	#event .edown{
 		background-color: grey;
 	}
-	#middle{
-		float: right;
-	}
-	#right{
-		float:right;
-	}
+	
 	#graph{
-		margin-top: 10px;
-		border:1px solid #4300ff;
+		clear: both;
+		margin-top: 110px;
+		border:1px solid #D8D8D8;
 		background-color: white;
 	}
 	#graph .title{
